--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -14,6 +14,17 @@
   margin-bottom: 0;
 }
 
+/* показываем сообщение об ошибке */
+.popup__error_visible {
+  font-size: 12px;
+  color: red;
+}
+
+/* inputErrorClass - меняем цвет рамки */
+.popup__input_type_error {
+  border-bottom: 1px solid red;
+  }
+
 @media screen and (max-width: 568px) {
   .popup__title {
     font-size: 12px;
