--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -13,8 +13,16 @@
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  display: block;
 }
 
 .card__like-button:hover {
   opacity: 0.6;
 }
+
+.card__like-counter {
+  display: block;       
+  text-align: center;   
+  margin-top: 2px;      
+}
+
